Fixed the quest cards stretching to fill space, padding between sidebar elements and the profile preview

--- a/front-end/src/pages/Dashboard/Dashboard.css
+++ b/front-end/src/pages/Dashboard/Dashboard.css
@@ -119,15 +119,18 @@ p {
     font-size: medium;
 }
 
-.nav-menu,
-.tasks {
-    padding: 0.5rem;
+.nav-menu {
+    padding: 1rem;
+}
+
+.nav-menu .text-title {
+    padding: 0.5rem 0 0.5rem 0;
 }
 
 .nav-menu .menu-list {
     list-style: none;
     margin: 0;
-    padding: 0.5rem;
+    padding: 0rem;
 }
 
 .nav-menu .menu-link {
@@ -153,6 +156,58 @@ p {
 .menu-link .icon {
     width: 1.5rem;
     height: 1.5rem;
+}
+
+/* ------- SIDEBAR HEADER VER2 ------- */
+.profile-view {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-bottom: 1rem;
+    border-bottom: 1px solid #013c58;
+}
+
+.profile-large {
+    text-align: center;
+    flex-grow: 1;
+    flex-shrink: 1;
+    width: 80%;
+    max-height: 30vh;
+    object-fit: fill;
+}
+
+.profile-info {
+    text-align: center;
+}
+
+.profile-info .name {
+    font-size: large;
+}
+
+.stats-bar {
+    width: 80%;
+    border-radius: 1rem;
+    padding: 0.5rem;
+    margin: 0.25rem;
+
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+
+}
+
+#points-bar {
+    background-color: #013c58;
+    color: #f5a201;
+}
+
+#streaks-bar {
+    background-color: #f5a201;
+    color: #013c58;
+}
+    
+.bold {
+    font-weight: 600;
 }
 
 /* ------- MAIN BODY ------- */
@@ -363,14 +418,13 @@ p.small {
 
 #quests-recs {
     display: grid;
-    flex-direction: row;
     grid-template-columns: repeat(4, 1fr);
     max-width: 100%;
     height: auto;
     gap: 1rem;
 
     padding: 0 2rem 0 2rem;
-    margin: 0 auto;
+    margin: 0;
     margin-top: 1rem;
 }
 
@@ -379,7 +433,6 @@ p.small {
     flex-direction: column;
     justify-content: flex-start;
     flex: 1;
-    max-width: 300px;
     overflow: hidden;
 
     border: 2px solid rgb(230, 230, 230);
@@ -557,8 +610,12 @@ p.small {
         height: auto;
     }
 
-    .quest-recs {
+    .quests-recs {
+        display: grid;
         grid-template-columns: 1fr;
+        grid-template-rows: [sect1-start] auto [sect2-start] auto [sect3-start] auto [sect4-start] auto;
+        row-gap: 2rem;
+
     }
 
     .analytics-tools, .analytics-journal {
